# frida-mcp

./: AGENT_GUIDE.md  README.md  RECIPES.md  agent.js  package.json  pyproject.toml  server.py  setup.sh
frida_pro_mcp/: __init__.py  __main__.py
research/: ARCHITECTURE.md  MCP_TOOLS_SPEC.md
