[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frida-pro-mcp"
version = "1.0.0"
description = "Advanced MCP server exposing full Frida dynamic instrumentation toolkit (55 tools)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["frida", "mcp", "instrumentation", "reverse-engineering", "security", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "frida>=16.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
frida-pro-mcp = "frida_pro_mcp:main"

[project.urls]
Homepage = "https://github.com/dryfryce/frida-mcp"
Repository = "https://github.com/dryfryce/frida-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["frida_pro_mcp*"]
